# diary-

./: .env  .gitignore  .gitmessage.txt  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  etc.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: checks.yml
alembic/: env.py
alembic/versions/: 90b3d3508749_create_users_table2.py  ae3d0187d018_check.py  cf767ff13102_initial_migration2.py  efb87439059f_add_users_table.py  fa0c5134ae65_initial_migration.py
app/: database.py  deps.py  main.py  models.py
app/auth/: router.py  security.py  service.py
app/core/: config.py  database.py  dependencies.py  deps.py  security.py
app/crud/: diary.py  tags.py  user.py
app/frontend/: Tailwind, 라우팅 초기세팅.txt  main.html  vite.config.js  실행 방법.txt
app/models/: __init__.py  user.py
app/rotuers/: some_router.py
app/routers/: auth.py  user.py
app/schemas/: auth.py  diary.py  tags.py  token.py  user.py
app/services/: auth.py
app/user/: authentication.py  authorization.py  models.py  request.py  routers.py
migrations/: env.py
migrations/versions/: 188c77f79f89_create_user_table2.py  1a52543dd0bc_init.py  3b16cd4ef283_initial.py  720d31da4ce4_third.py  9b60e396df63_create_user_table4.py  9fe97285482f_create_user_table1.py  aa14900f6742_second.py  b06d8ed55573_initial.py  bc61de5d4810_create_user_table.py  c4ce84ed7a85_second.py  cefc6e3e88ed_initial.py
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo9
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mydatabase/: alembic_version.ibd
mysql/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  (+83 more)
scripts/: run.sh
team8_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+55 files in other folders)
