[project]
name = "team8-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "cryptography>=45.0.3",
    "fastapi[standard]>=0.115.12",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.13",
]

[tool.setuptools.packages.find]
where = ["."]  # 루트에서 검색
include = ["app*"]
# uv remove
# uv tree
# uv add ruff --dev